# bDelta

./: .gitignore  Cargo.toml  README.md
src/: apply.rs  diff.rs  main.rs
