[package]
name = "delta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
zip = "0.6.2"

[package]
description = "A utility that generates a binary delta of two files and allows you to apply it on the source."
readme = "README.md"
repository = "https://github.com/manorajesh/bDelta"